# locoia-backend-coding-challenge

./: .gitignore  Dockerfile  README.md  TODO.md  main.py  pyproject.toml
gistapi/: gistapi.py  gistapi_service.py  util.py
templates/: search.html
tests/: README.md  test_unit.py  test_views.py  utils_for_tests.py
